manifests/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    version: ""
  annotations:
    instrumentation.opentelemetry.io/inject-go: 'true'
    instrumentation.opentelemetry.io/otel-go-auto-target-exe: '/frontend'
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: ""
    spec:
      imagePullSecrets:
        - name: ghcr-io
      containers:
        - name: frontend
          image: ghcr.io/procinger/gitops-demo-frontend/frontend:v1.1.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
