manifests/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http
      targetPort: http
      port: 80
  selector:
    app: frontend
